rendered/observability/clickstack-install.yaml
---
# Source: clickstack/templates/hyperdx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickstack-app
  labels:
    helm.sh/chart: clickstack-1.1.1
    app.kubernetes.io/name: clickstack
    app.kubernetes.io/instance: clickstack
    app.kubernetes.io/version: "2.8.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: app
    - port: 4320
      targetPort: 4320
      name: opamp
  selector:
    app.kubernetes.io/name: clickstack
    app.kubernetes.io/instance: clickstack
    app: clickstack
---
# Source: clickstack/templates/mongodb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickstack-mongodb
  labels:
    helm.sh/chart: clickstack-1.1.1
    app.kubernetes.io/name: clickstack
    app.kubernetes.io/instance: clickstack
    app.kubernetes.io/version: "2.8.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app.kubernetes.io/name: clickstack
    app.kubernetes.io/instance: clickstack
    app: mongodb
---
# Source: clickstack/templates/hyperdx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickstack-app
  labels:
    helm.sh/chart: clickstack-1.1.1
    app.kubernetes.io/name: clickstack
    app.kubernetes.io/instance: clickstack
    app.kubernetes.io/version: "2.8.0"
    app.kubernetes.io/managed-by: Helm
    app: clickstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: clickstack
      app.kubernetes.io/instance: clickstack
      app: clickstack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clickstack
        app.kubernetes.io/instance: clickstack
        app: clickstack
      annotations:
    spec:
      containers:
        - name: app
          image: "docker.hyperdx.io/hyperdx/hyperdx:2.8.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: app-port
              containerPort: 3000
            - name: api-port
              containerPort: 8000
            - name: opamp-port
              containerPort: 4320
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
# Source: clickstack/templates/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickstack-mongodb
  labels:
    helm.sh/chart: clickstack-1.1.1
    app.kubernetes.io/name: clickstack
    app.kubernetes.io/instance: clickstack
    app.kubernetes.io/version: "2.8.0"
    app.kubernetes.io/managed-by: Helm
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: clickstack
      app.kubernetes.io/instance: clickstack
      app: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clickstack
        app.kubernetes.io/instance: clickstack
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: "mongo:5.0.32-focal"
          ports:
            - containerPort: 27017
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          emptyDir: {}
