rendered/observability/service-collector-promrw.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-promrw
  namespace: observability
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: otel-collector-promrw
    app.kubernetes.io/part-of: observability
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: opentelemetry-collector
    app.kubernetes.io/instance: otel-collector
  ports:
  - name: promrw
    port: 9411
    targetPort: 9411
    nodePort: 30411
    protocol: TCP
